# gainput

./: README.md  meson.build  meson_options.txt
lib/: meson.build
samples/: meson.build
samples/basic/: meson.build
