option('gainput_samples', type: 'boolean', description: 'Build Samples for Gainput', value: false)
option('gainput_tests', type: 'boolean', description: 'Build Tests for Gainput', value: false)
option('gainput_build_shared', type: 'boolean', description: 'Build shared library for Gainput', value: false)
option('gainput_build_static', type: 'boolean', description: 'Build static library for Gainput', value: true) 